cabal-version:       2.2
name:                kademlia 
version:             0.1.0.0
synopsis:            A multiformats implementation using Haskell.
-- description:         
-- license:             BSD3
-- license-file:        LICENSE
author:              Adithya Kumar
maintainer:          adithya.nocreed@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  ChangeLog.md

library 
  exposed-modules:     Spec 
                     , Protocol
                     , Client
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base
                     , bytestring 
                     , network
                     , cereal
                     , containers
                     , vector
                     , transformers
  hs-source-dirs:      src
  default-language:    Haskell2010

